kubernetes-networks/web-deploy.yaml
apiVersion: apps/v1
kind: Deployment
strategy:
  type: RollingUpdate
  rollingUpdate:
     maxUnavailable: 0
     maxSurge: 100%
metadata:
  name: web
spec:
  replicas: 3
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      name: web
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: bvote/nginx
          readinessProbe:
            httpGet:
              path: /index.html
              port: 8000
          livenessProbe:
            tcpSocket: { port: 8000 }
          volumeMounts:
            - name: app
              mountPath: /app
      volumes:
         - name: app
           emptyDir: { }
